# synthetic-citizen-lab

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.omo/drafts/: synthetic-citizen-general-experiment-platform.md  synthetic-citizen-mvp.md
.omo/plans/: synthetic-citizen-general-experiment-platform.md  synthetic-citizen-mvp.md
.omo/run-continuation/: ses_07232d068ffeVhDgY7b0SW8Hwk.json  ses_072605430ffeITLxrFQlhRnmVr.json  ses_072605435ffeIVUyBd1mYxB5KF.json  ses_072706df5ffe59lvu4g9VYbcoB.json  ses_072706df9ffeENooE5sUdtVKcb.json  ses_072706e8bffdHThcp2zdR5oyZx.json  ses_072711e3cffesud444SR8bZf6P.json  ses_072711e44ffejcCr3hnvaNNYpp.json  ses_072711e48ffeDz8M7Vboiome6I.json  ses_072711e61ffeDNCy6lZ06dhznj.json  ses_072711e65ffeAMutMMsrMz6RoR.json  ses_0727a4d9effebz7OLJI9Z4AJ9l.json  ses_0727a4de5ffeQknMzjs87zfaFK.json  ses_07ff664daffd35GuludcvXX7NQ.json  ses_07ff6651cffeHBWSHFWxsZjVf6.json  ses_07ff6652bffeerr2t2mteWcQPS.json  ses_07ff6664affeDGkgkhyCud4NoP.json  ses_07ff66658ffeDUE5P3EYGXEJ7r.json  ses_080336837ffeS07hgXUFfvhL0Y.json  ses_080336843ffe7O24vAUNh33csi.json  ses_080336848ffedxgmK4u6wuClVT.json  ses_080336858ffe5gfbaCxMO3N0Q5.json  ses_080336869ffeLiRlubMJD51K28.json  ses_0804e8b8affeTZVJSxjHxLnpdq.json  ses_080541f87ffdCwH3uqxJHHy5Gi.json  ses_080542036ffes5t64tGSKOS9rV.json  (+5 more)
docs/: PRD.md  PRD_APPENDIX.md  cohort_sampler.md  column_profile.md  data_dictionary.md  experiment_cli.md  revised_experiment_platform_plan.md
examples/: cohort_healthcare.json
tests/: experiment_fixtures.py  test_category_profile.py  test_cohort_sampler.py  test_data_inspector.py  test_experiment_cli.py  test_experiment_models.py  test_experiment_run_cli.py  test_experiment_runner.py  test_experiment_storage.py  test_import.py  test_mock_engine.py  test_persona_context.py
(+38 files in other folders)
